docs(website): added tutorial on using Serenity/JS with Playwright Test
The content was already there in a blog article, but it was too hard to find. Having a dedicated
tutorial should improve discoverability.

--- a/documentation/serenity-js.org/docs/getting-started/architecture.mdx
+++ b/documentation/serenity-js.org/docs/getting-started/architecture.mdx
@@ -77,7 +77,7 @@ Out of the box, Serenity/JS enables integration with [web-](/handbook/web-testin
 interfaces and provides wrappers around battle-tested integration libraries to take care of the low-level interactions with your system.
 
 In particular:
-- [**Serenity/JS Web module**](/api/web) provides test library-agnostic Screenplay Pattern APIs dedicated to web UI testing
+- [**Serenity/JS Web module**](/api/web) provides the universal web testing façade - a set of integration library-agnostic Screenplay Pattern APIs dedicated to web UI testing
 - [**Serenity/JS Playwright module**](/api/playwright) provides wrappers around [Microsoft Playwright](https://playwright.dev/), to be used with the Serenity/JS Web module
 - [**Serenity/JS Protractor module**](/api/protractor) provides wrappers around [Angular Protractor](https://www.protractortest.org/#/), to be used with the Serenity/JS Web module
 - [**Serenity/JS WebdriverIO module**](/api/webdriverio) provides wrappers around [WebdriverIO](https://webdriver.io/), to be used with the Serenity/JS Web module
