--- a/documentation/serenity-js.org/docs/getting-started/serenity-js-with-playwright-test.mdx
+++ b/documentation/serenity-js.org/docs/getting-started/serenity-js-with-playwright-test.mdx
@@ -5,7 +5,9 @@ title: Using with Playwright Test
 
 # Using Serenity/JS with Playwright Test
 
-Serenity/JS offers great support for Playwright, including **Playwright Test**, **Playwright Test UI Mode**, **Playwright trace viewer**, and **Playwright auto-waiting locators**!
+Serenity/JS offers excellent support for Playwright, including **Playwright Test**, **UI Mode**, **trace viewer**, and **auto-waiting locators**!
+Plus, it accommodates both classic Playwright tests and Serenity/JS [Screenplay Pattern scenarios](/handbook/design/screenplay-pattern/),
+allowing you to migrate to Screenplay gradually if you'd like.
 
 In this article, and in **less than 5 minutes**, you'll learn how to:
 - **integrate Serenity/JS** with your Playwright test suite,
