docs(website): corrected a typo

--- a/documentation/serenity-js.org/docs/getting-started/architecture.mdx
+++ b/documentation/serenity-js.org/docs/getting-started/architecture.mdx
@@ -29,7 +29,7 @@ The responsibility of an adapter is to listen to the actions performed by the te
 which are then used for [test reporting purposes](/handbook/reporting/).
 
 :::tip First steps with Serenity/JS
-Setting up a Serenity/JS test adapter and reporting services is the first thing most developers do when introducing Serenity/JS to an existing code base.
+Setting up a Serenity/JS test runner adapter and reporting services is the first thing most developers do when introducing Serenity/JS to an existing code base.
 :::
 
 Out of the box, Serenity/JS offers test runner adapters for the following test runners:
